perf : perf balancer payment order product service
