# backend/api/balancer/v1/balancer_http.pb.go
@@ -26,6 +26,7 @@ const OperationBalanceCreateMerchantBalance = "/ecommerce.balancer.v1.Balance/Cr
 const OperationBalanceCreateTransaction = "/ecommerce.balancer.v1.Balance/CreateTransaction"
 const OperationBalanceFreezeBalance = "/ecommerce.balancer.v1.Balance/FreezeBalance"
 const OperationBalanceGetMerchantBalance = "/ecommerce.balancer.v1.Balance/GetMerchantBalance"
+const OperationBalanceGetMerchantVersion = "/ecommerce.balancer.v1.Balance/GetMerchantVersion"
 const OperationBalanceGetTransactions = "/ecommerce.balancer.v1.Balance/GetTransactions"
 const OperationBalanceGetUserBalance = "/ecommerce.balancer.v1.Balance/GetUserBalance"
 const OperationBalanceRechargeBalance = "/ecommerce.balancer.v1.Balance/RechargeBalance"
@@ -48,6 +49,8 @@ type BalanceHTTPServer interface {
 	FreezeBalance(context.Context, *FreezeBalanceRequest) (*FreezeBalanceReply, error)
 	// GetMerchantBalance 获取商家余额
 	GetMerchantBalance(context.Context, *GetMerchantBalanceRequest) (*BalanceReply, error)
+	// GetMerchantVersion 获取商家版本号
+	GetMerchantVersion(context.Context, *GetMerchantVersionRequest) (*GetMerchantVersionReply, error)
 	// GetTransactions 获取商家或者用户订单流水
 	GetTransactions(context.Context, *GetTransactionsRequest) (*GetTransactionsReply, error)
 	// GetUserBalance 获取用户余额
@@ -62,6 +65,7 @@ func RegisterBalanceHTTPServer(s *http.Server, srv BalanceHTTPServer) {
 	r := s.Route("/")
 	r.PUT("/v1/balances/users/{user_id}/balance", _Balance_CreateConsumerBalance0_HTTP_Handler(srv))
 	r.PUT("/v1/balances/merchants/{merchant_id}/balance", _Balance_CreateMerchantBalance0_HTTP_Handler(srv))
+	r.GET("/v1/orders/merchant/version", _Balance_GetMerchantVersion0_HTTP_Handler(srv))
 	r.GET("/v1/balances/users/{user_id}/balance", _Balance_GetUserBalance0_HTTP_Handler(srv))
 	r.POST("/v1/balances/freeze", _Balance_FreezeBalance0_HTTP_Handler(srv))
 	r.POST("/v1/balances/freezes/{freeze_id}/confirm", _Balance_ConfirmTransfer0_HTTP_Handler(srv))
@@ -119,6 +123,25 @@ func _Balance_CreateMerchantBalance0_HTTP_Handler(srv BalanceHTTPServer) func(ct
 			return err
 		}
 		reply := out.(*CreateMerchantBalanceReply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Balance_GetMerchantVersion0_HTTP_Handler(srv BalanceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetMerchantVersionRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationBalanceGetMerchantVersion)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetMerchantVersion(ctx, req.(*GetMerchantVersionRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*GetMerchantVersionReply)
 		return ctx.Result(200, reply)
 	}
 }
@@ -338,6 +361,7 @@ type BalanceHTTPClient interface {
 	CreateTransaction(ctx context.Context, req *CreateTransactionRequest, opts ...http.CallOption) (rsp *CreateTransactionReply, err error)
 	FreezeBalance(ctx context.Context, req *FreezeBalanceRequest, opts ...http.CallOption) (rsp *FreezeBalanceReply, err error)
 	GetMerchantBalance(ctx context.Context, req *GetMerchantBalanceRequest, opts ...http.CallOption) (rsp *BalanceReply, err error)
+	GetMerchantVersion(ctx context.Context, req *GetMerchantVersionRequest, opts ...http.CallOption) (rsp *GetMerchantVersionReply, err error)
 	GetTransactions(ctx context.Context, req *GetTransactionsRequest, opts ...http.CallOption) (rsp *GetTransactionsReply, err error)
 	GetUserBalance(ctx context.Context, req *GetUserBalanceRequest, opts ...http.CallOption) (rsp *BalanceReply, err error)
 	RechargeBalance(ctx context.Context, req *RechargeBalanceRequest, opts ...http.CallOption) (rsp *RechargeBalanceReply, err error)
@@ -435,6 +459,19 @@ func (c *BalanceHTTPClientImpl) GetMerchantBalance(ctx context.Context, in *GetM
 	pattern := "/v1/balances/merchants/{merchant_id}/balance"
 	path := binding.EncodeURL(pattern, in, true)
 	opts = append(opts, http.Operation(OperationBalanceGetMerchantBalance))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+func (c *BalanceHTTPClientImpl) GetMerchantVersion(ctx context.Context, in *GetMerchantVersionRequest, opts ...http.CallOption) (*GetMerchantVersionReply, error) {
+	var out GetMerchantVersionReply
+	pattern := "/v1/orders/merchant/version"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationBalanceGetMerchantVersion))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
 	if err != nil {
