# backend/application/payment/internal/data/models/query.sql.go
@@ -14,32 +14,32 @@ import (
 
 const CreatePaymentQuery = `-- name: CreatePaymentQuery :one
 INSERT INTO payments.payments (id, order_id, consumer_id, amount, currency, method, status,
-                               subject, trade_no, freeze_id,consumer_version, merchant_version)
+                               subject, trade_no, freeze_id,consumer_version, merchant_versions)
 VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12)
-RETURNING id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+RETURNING id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 `
 
 type CreatePaymentQueryParams struct {
-	ID              int64          `json:"id"`
-	OrderID         int64          `json:"orderID"`
-	ConsumerID      uuid.UUID      `json:"consumerID"`
-	Amount          pgtype.Numeric `json:"amount"`
-	Currency        string         `json:"currency"`
-	Method          string         `json:"method"`
-	Status          string         `json:"status"`
-	Subject         string         `json:"subject"`
-	TradeNo         string         `json:"tradeNo"`
-	FreezeID        int64          `json:"freezeID"`
-	ConsumerVersion int64          `json:"consumerVersion"`
-	MerchantVersion int64          `json:"merchantVersion"`
+	ID               int64          `json:"id"`
+	OrderID          int64          `json:"orderID"`
+	ConsumerID       uuid.UUID      `json:"consumerID"`
+	Amount           pgtype.Numeric `json:"amount"`
+	Currency         string         `json:"currency"`
+	Method           string         `json:"method"`
+	Status           string         `json:"status"`
+	Subject          string         `json:"subject"`
+	TradeNo          string         `json:"tradeNo"`
+	FreezeID         int64          `json:"freezeID"`
+	ConsumerVersion  int64          `json:"consumerVersion"`
+	MerchantVersions []int64        `json:"merchantVersions"`
 }
 
 // CreatePaymentQuery
 //
 //	INSERT INTO payments.payments (id, order_id, consumer_id, amount, currency, method, status,
-//	                               subject, trade_no, freeze_id,consumer_version, merchant_version)
+//	                               subject, trade_no, freeze_id,consumer_version, merchant_versions)
 //	VALUES ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12)
-//	RETURNING id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+//	RETURNING id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 func (q *Queries) CreatePaymentQuery(ctx context.Context, arg CreatePaymentQueryParams) (PaymentsPayments, error) {
 	row := q.db.QueryRow(ctx, CreatePaymentQuery,
 		arg.ID,
@@ -53,7 +53,7 @@ func (q *Queries) CreatePaymentQuery(ctx context.Context, arg CreatePaymentQuery
 		arg.TradeNo,
 		arg.FreezeID,
 		arg.ConsumerVersion,
-		arg.MerchantVersion,
+		arg.MerchantVersions,
 	)
 	var i PaymentsPayments
 	err := row.Scan(
@@ -68,7 +68,7 @@ func (q *Queries) CreatePaymentQuery(ctx context.Context, arg CreatePaymentQuery
 		&i.TradeNo,
 		&i.FreezeID,
 		&i.ConsumerVersion,
-		&i.MerchantVersion,
+		&i.MerchantVersions,
 		&i.CreatedAt,
 		&i.UpdatedAt,
 	)
@@ -76,14 +76,14 @@ func (q *Queries) CreatePaymentQuery(ctx context.Context, arg CreatePaymentQuery
 }
 
 const GetByIDQuery = `-- name: GetByIDQuery :one
-SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 FROM payments.payments
 WHERE id = $1
 `
 
 // GetByIDQuery
 //
-//	SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+//	SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 //	FROM payments.payments
 //	WHERE id = $1
 func (q *Queries) GetByIDQuery(ctx context.Context, id int64) (PaymentsPayments, error) {
@@ -101,7 +101,7 @@ func (q *Queries) GetByIDQuery(ctx context.Context, id int64) (PaymentsPayments,
 		&i.TradeNo,
 		&i.FreezeID,
 		&i.ConsumerVersion,
-		&i.MerchantVersion,
+		&i.MerchantVersions,
 		&i.CreatedAt,
 		&i.UpdatedAt,
 	)
@@ -109,14 +109,14 @@ func (q *Queries) GetByIDQuery(ctx context.Context, id int64) (PaymentsPayments,
 }
 
 const GetByOrderIDQuery = `-- name: GetByOrderIDQuery :one
-SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 FROM payments.payments
 WHERE order_id = $1
 `
 
 // GetByOrderIDQuery
 //
-//	SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+//	SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 //	FROM payments.payments
 //	WHERE order_id = $1
 func (q *Queries) GetByOrderIDQuery(ctx context.Context, orderID int64) (PaymentsPayments, error) {
@@ -134,7 +134,7 @@ func (q *Queries) GetByOrderIDQuery(ctx context.Context, orderID int64) (Payment
 		&i.TradeNo,
 		&i.FreezeID,
 		&i.ConsumerVersion,
-		&i.MerchantVersion,
+		&i.MerchantVersions,
 		&i.CreatedAt,
 		&i.UpdatedAt,
 	)
@@ -142,14 +142,14 @@ func (q *Queries) GetByOrderIDQuery(ctx context.Context, orderID int64) (Payment
 }
 
 const GetPayment = `-- name: GetPayment :one
-SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 FROM payments.payments
 WHERE id = $1
 `
 
 // GetPayment
 //
-//	SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+//	SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 //	FROM payments.payments
 //	WHERE id = $1
 func (q *Queries) GetPayment(ctx context.Context, id int64) (PaymentsPayments, error) {
@@ -167,7 +167,7 @@ func (q *Queries) GetPayment(ctx context.Context, id int64) (PaymentsPayments, e
 		&i.TradeNo,
 		&i.FreezeID,
 		&i.ConsumerVersion,
-		&i.MerchantVersion,
+		&i.MerchantVersions,
 		&i.CreatedAt,
 		&i.UpdatedAt,
 	)
@@ -175,14 +175,14 @@ func (q *Queries) GetPayment(ctx context.Context, id int64) (PaymentsPayments, e
 }
 
 const GetPaymentByOrderID = `-- name: GetPaymentByOrderID :one
-SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 FROM payments.payments
 WHERE order_id = $1
 `
 
 // GetPaymentByOrderID
 //
-//	SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+//	SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 //	FROM payments.payments
 //	WHERE order_id = $1
 func (q *Queries) GetPaymentByOrderID(ctx context.Context, orderID int64) (PaymentsPayments, error) {
@@ -200,7 +200,7 @@ func (q *Queries) GetPaymentByOrderID(ctx context.Context, orderID int64) (Payme
 		&i.TradeNo,
 		&i.FreezeID,
 		&i.ConsumerVersion,
-		&i.MerchantVersion,
+		&i.MerchantVersions,
 		&i.CreatedAt,
 		&i.UpdatedAt,
 	)
@@ -208,14 +208,14 @@ func (q *Queries) GetPaymentByOrderID(ctx context.Context, orderID int64) (Payme
 }
 
 const GetPaymentByTradeNo = `-- name: GetPaymentByTradeNo :one
-SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 FROM payments.payments
 WHERE trade_no = $1
 `
 
 // 根据商户订单号查询支付记录
 //
-//	SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+//	SELECT id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 //	FROM payments.payments
 //	WHERE trade_no = $1
 func (q *Queries) GetPaymentByTradeNo(ctx context.Context, tradeNo string) (PaymentsPayments, error) {
@@ -233,7 +233,7 @@ func (q *Queries) GetPaymentByTradeNo(ctx context.Context, tradeNo string) (Paym
 		&i.TradeNo,
 		&i.FreezeID,
 		&i.ConsumerVersion,
-		&i.MerchantVersion,
+		&i.MerchantVersions,
 		&i.CreatedAt,
 		&i.UpdatedAt,
 	)
@@ -246,7 +246,7 @@ SET status     = $1,
     updated_at = now()
 WHERE (id = $2 AND $2 != 0)
    OR (order_id = $3 AND $3 != 0)
-RETURNING id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+RETURNING id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 `
 
 type UpdatePaymentStatusParams struct {
@@ -262,7 +262,7 @@ type UpdatePaymentStatusParams struct {
 //	    updated_at = now()
 //	WHERE (id = $2 AND $2 != 0)
 //	   OR (order_id = $3 AND $3 != 0)
-//	RETURNING id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+//	RETURNING id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 func (q *Queries) UpdatePaymentStatus(ctx context.Context, arg UpdatePaymentStatusParams) (PaymentsPayments, error) {
 	row := q.db.QueryRow(ctx, UpdatePaymentStatus, arg.Status, arg.ID, arg.OrderID)
 	var i PaymentsPayments
@@ -278,7 +278,7 @@ func (q *Queries) UpdatePaymentStatus(ctx context.Context, arg UpdatePaymentStat
 		&i.TradeNo,
 		&i.FreezeID,
 		&i.ConsumerVersion,
-		&i.MerchantVersion,
+		&i.MerchantVersions,
 		&i.CreatedAt,
 		&i.UpdatedAt,
 	)
@@ -291,7 +291,7 @@ SET status     = $2,
     id         = $3,
     updated_at = now()
 WHERE id = $1
-RETURNING id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+RETURNING id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 `
 
 type UpdateStatusQueryParams struct {
@@ -307,7 +307,7 @@ type UpdateStatusQueryParams struct {
 //	    id         = $3,
 //	    updated_at = now()
 //	WHERE id = $1
-//	RETURNING id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_version, created_at, updated_at
+//	RETURNING id, order_id, consumer_id, amount, currency, method, status, subject, trade_no, freeze_id, consumer_version, merchant_versions, created_at, updated_at
 func (q *Queries) UpdateStatusQuery(ctx context.Context, arg UpdateStatusQueryParams) (PaymentsPayments, error) {
 	row := q.db.QueryRow(ctx, UpdateStatusQuery, arg.ID, arg.Status, arg.ID_2)
 	var i PaymentsPayments
@@ -323,7 +323,7 @@ func (q *Queries) UpdateStatusQuery(ctx context.Context, arg UpdateStatusQueryPa
 		&i.TradeNo,
 		&i.FreezeID,
 		&i.ConsumerVersion,
-		&i.MerchantVersion,
+		&i.MerchantVersions,
 		&i.CreatedAt,
 		&i.UpdatedAt,
 	)
